// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> snapshot test should be rendered correctly when path is not root 1`] = `
<header
  className="header"
>
  <div
    className="container"
  >
    <div
      className="header__wrapper"
    >
      <div
        className="header__left"
      >
        <a
          className="header__logo-link header__logo-link--active"
        >
          <img
            alt="6 cities logo"
            className="header__logo"
            height="41"
            src="/img/logo.svg"
            width="81"
          />
        </a>
      </div>
      <nav
        className="header__nav"
      >
        <ul
          className="header__nav-list"
        >
          <li
            className="header__nav-item user"
          >
            <a
              className="header__nav-link header__nav-link--profile"
              href="/favorites"
              onClick={[Function]}
            >
              <div
                className="header__avatar-wrapper header__avatar-wrapper--pro user__avatar-wrapper"
              >
                <img
                  alt="User avatar"
                  className="header__avatar user__avatar"
                  height="74"
                  src="https://htmlacademy-react-3.appspot.com/six-citiesimg/user.jpg"
                  width="74"
                />
              </div>
              <span
                className="header__user-name user__name"
              >
                aaa@ee.ee
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;

exports[`<Header /> snapshot test should be rendered correctly when path is root 1`] = `
<header
  className="header"
>
  <div
    className="container"
  >
    <div
      className="header__wrapper"
    >
      <div
        className="header__left"
      >
        <a
          className="header__logo-link header__logo-link--active"
        >
          <img
            alt="6 cities logo"
            className="header__logo"
            height="41"
            src="/img/logo.svg"
            width="81"
          />
        </a>
      </div>
      <nav
        className="header__nav"
      >
        <ul
          className="header__nav-list"
        >
          <li
            className="header__nav-item user"
          >
            <a
              className="header__nav-link header__nav-link--profile"
              href="/favorites"
              onClick={[Function]}
            >
              <div
                className="header__avatar-wrapper header__avatar-wrapper--pro user__avatar-wrapper"
              >
                <img
                  alt="User avatar"
                  className="header__avatar user__avatar"
                  height="74"
                  src="https://htmlacademy-react-3.appspot.com/six-citiesimg/user.jpg"
                  width="74"
                />
              </div>
              <span
                className="header__user-name user__name"
              >
                aaa@ee.ee
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;

exports[`<Header /> snapshot test should be rendered correctly when the user is authorized 1`] = `
<header
  className="header"
>
  <div
    className="container"
  >
    <div
      className="header__wrapper"
    >
      <div
        className="header__left"
      >
        <a
          className="header__logo-link"
          href="/"
          onClick={[Function]}
        >
          <img
            alt="6 cities logo"
            className="header__logo"
            height="41"
            src="/img/logo.svg"
            width="81"
          />
        </a>
      </div>
      <nav
        className="header__nav"
      >
        <ul
          className="header__nav-list"
        >
          <li
            className="header__nav-item user"
          >
            <a
              className="header__nav-link header__nav-link--profile"
              href="/favorites"
              onClick={[Function]}
            >
              <div
                className="header__avatar-wrapper header__avatar-wrapper--pro user__avatar-wrapper"
              >
                <img
                  alt="User avatar"
                  className="header__avatar user__avatar"
                  height="74"
                  src="https://htmlacademy-react-3.appspot.com/six-citiesimg/user.jpg"
                  width="74"
                />
              </div>
              <span
                className="header__user-name user__name"
              >
                aaa@ee.ee
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;

exports[`<Header /> snapshot test should be rendered correctly when the user is not authorized 1`] = `
<header
  className="header"
>
  <div
    className="container"
  >
    <div
      className="header__wrapper"
    >
      <div
        className="header__left"
      >
        <a
          className="header__logo-link"
          href="/"
          onClick={[Function]}
        >
          <img
            alt="6 cities logo"
            className="header__logo"
            height="41"
            src="/img/logo.svg"
            width="81"
          />
        </a>
      </div>
      <nav
        className="header__nav"
      >
        <ul
          className="header__nav-list"
        >
          <li
            className="header__nav-item user"
          >
            <a
              className="header__nav-link header__nav-link--profile"
              href="/login"
              onClick={[Function]}
            >
              <div
                className="header__avatar-wrapper  user__avatar-wrapper"
              />
              <span
                className="header__login"
              >
                Sign in
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;
